--- a/api/pom.xml
+++ b/api/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>flink-streaming-scala_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-queryable-state-runtime_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
