--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <flink.version>1.6.0</flink.version>
-        <!-- provided jars already exist in flink-dist_2.11-1.6.0.jar -->
-        <flink.scope>provided</flink.scope>
+        <!-- scope of jars already exist in flink-dist_2.11-1.6.0.jar -->
+        <flink.scope>compile</flink.scope>
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <scala.binary.version>2.11</scala.binary.version>
