--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <scala.binary.version>2.11</scala.binary.version>
-        <scala.version>2.11.11</scala.version>
+        <scala.version>2.11.12</scala.version>
         <junit.version>4.11</junit.version>
         <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
@@ -119,6 +119,12 @@
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
                     <version>${scala-maven-plugin.version}</version>
+                    <configuration>
+                        <args>
+                            <!-- solve compilation error under Java 11 -->
+                            <arg>-nobootcp</arg>
+                        </args>
+                    </configuration>
                     <executions>
                         <execution>
                             <goals>
