table sql, start flink sql test & upgrade flink version form 1.6 to 1.7.1
Change-Id: I59a581fbfdd9150b0163ad8f1543a9cf5bd7c3b2

--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <flink.version>1.6.0</flink.version>
-        <!-- scope of jars already exist in flink-dist_2.11-1.6.0.jar -->
-        <flink.scope>compile</flink.scope>
+        <flink.version>1.7.1</flink.version>
+        <!-- scope of jars already exist in flink-dist_2.11-1.7.1.jar -->
+        <flink.scope>provided</flink.scope>
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <scala.binary.version>2.11</scala.binary.version>
@@ -37,6 +37,24 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-filesystem_2.11</artifactId>
+                <version>${flink.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-hcatalog_${scala.binary.version}</artifactId>
+                <version>${flink.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-table_${scala.binary.version}</artifactId>
+                <version>${flink.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-core</artifactId>
