--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>api</module>
+        <module>connector-hive</module>
     </modules>
 
     <name>flink-learn</name>
