--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,8 +16,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.hive</groupId>
-            <artifactId>hive-exec</artifactId>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-json</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-csv</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
