--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
         <dependencies>
             <dependency>
                 <groupId>org.apache.flink</groupId>
+                <artifactId>flink-avro</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
                 <artifactId>flink-parquet_${scala.binary.version}</artifactId>
                 <version>${flink.version}</version>
             </dependency>
