--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,53 @@
         <scala-maven-plugin.version>3.3.2</scala-maven-plugin.version>
         <build-helper-maven-plugin.version>1.11</build-helper-maven-plugin.version>
         <hive.version>3.1.1</hive.version>
+        <hadoop.version>3.1.0</hadoop.version>
+        <parquet-avro.version>1.10.0</parquet-avro.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.apache.flink</groupId>
+                <artifactId>flink-sequence-file</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
                 <artifactId>flink-avro</artifactId>
                 <version>${flink.version}</version>
+            </dependency>
+            <!-- parquet-avro must be specified when use ParquetAvroWriters in flink-parquet -->
+            <dependency>
+                <groupId>org.apache.parquet</groupId>
+                <artifactId>parquet-avro</artifactId>
+                <version>${parquet-avro.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.parquet</groupId>
+                        <artifactId>parquet-column</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.parquet</groupId>
+                        <artifactId>parquet-hadoop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.parquet</groupId>
+                        <artifactId>parquet-format</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>fastutil</artifactId>
+                        <groupId>it.unimi.dsi</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.avro</groupId>
+                        <artifactId>avro</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
@@ -144,16 +183,22 @@
                 <scope>${flink.scope}</scope>
             </dependency>
             <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-common</artifactId>
+                <version>${hadoop.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j.version}</version>
-                <scope>${flink.scope}</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
-                <scope>${flink.scope}</scope>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
