add flink-annotations dependency

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
     </modules>
 
     <name>flink-learn</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <url>https://itinycheng.github.io</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,6 +37,14 @@
         <hadoop.version>3.1.0</hadoop.version>
         <parquet-avro.version>1.10.0</parquet-avro.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-annotations</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
