--- a/api/pom.xml
+++ b/api/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>flink-connector-hive_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-filesystem_${scala.binary.version}</artifactId>
         </dependency>
