--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <flink.version>1.9.0</flink.version>
+        <flink.version>1.11.0</flink.version>
         <!-- scope of jars already exist in flink-dist_2.11-1.7.1.jar -->
         <flink.scope>provided</flink.scope>
         <slf4j.version>1.7.7</slf4j.version>
@@ -48,6 +48,26 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- start, for local test -->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-runtime-web_2.11</artifactId>
+                <version>${flink.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
+            <!-- end, for local test -->
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-sequence-file</artifactId>
@@ -109,6 +129,7 @@
                 <groupId>org.apache.hive</groupId>
                 <artifactId>hive-exec</artifactId>
                 <version>${hive.version}</version>
+                <scope>${flink.scope}</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
@@ -129,7 +150,7 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-hive_${scala.binary.version}</artifactId>
-                <version>1.10-SNAPSHOT</version>
+                <version>${flink.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.apache.flink</groupId>
@@ -143,7 +164,6 @@
                 <version>${flink.version}</version>
                 <scope>${flink.scope}</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-table-planner_${scala.binary.version}</artifactId>
@@ -181,7 +201,7 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-kafka-0.8_${scala.binary.version}</artifactId>
-                <version>${flink.version}</version>
+                <version>1.10.0</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
@@ -193,18 +213,6 @@
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-common</artifactId>
                 <version>${hadoop.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-                <version>${slf4j.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${log4j.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -236,6 +244,7 @@
                         <args>
                             <!-- solve compilation error under Java 11 -->
                             <arg>-nobootcp</arg>
+                            <arg>-target:jvm-1.8</arg>
                         </args>
                     </configuration>
                     <executions>
@@ -273,7 +282,8 @@
                                             implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                         <!--<mainClass>org.sonatype.haven.HavenCli</mainClass>-->
                                     </transformer>
-                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                    <transformer
+                                            implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 </transformers>
                             </configuration>
                         </execution>
