--- a/api/src/main/resources/log4j2-test.properties
+++ b/api/src/main/resources/log4j2-test.properties
@@ -16,8 +16,11 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=INFO, console
+rootLogger.level = INFO
+rootLogger.appenderRef.console.ref = ConsoleAppender
 
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %-60c %x - %m%n
+appender.consoleAppender.name = ConsoleAppender
+appender.consoleAppender.type = CONSOLE
+appender.consoleAppender.target = SYSTEM_ERR
+appender.consoleAppender.layout.type = PatternLayout
+appender.consoleAppender.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %x - %m%n
