--- a/pom.xml
+++ b/pom.xml
@@ -66,14 +66,12 @@
                 <version>${log4j.version}</version>
                 <scope>${flink.scope}</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
                 <version>${log4j.version}</version>
                 <scope>${flink.scope}</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
@@ -81,6 +79,12 @@
                 <scope>${flink.scope}</scope>
             </dependency>
             <!-- end, for local test -->
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-statebackend-rocksdb_2.11</artifactId>
+                <version>${flink.version}</version>
+                <scope>${flink.scope}</scope>
+            </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-sequence-file</artifactId>
