--- a/pom.xml
+++ b/pom.xml
@@ -20,20 +20,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <flink.version>1.11.2</flink.version>
+        <flink.version>1.12.1</flink.version>
         <!-- scope of jars already exist in flink-dist_2.11-1.7.1.jar -->
         <flink.scope>provided</flink.scope>
         <slf4j.version>1.7.15</slf4j.version>
-        <log4j.version>2.12.1</log4j.version>
+        <log4j.version>2.13.3</log4j.version>
         <scala.binary.version>2.11</scala.binary.version>
         <scala.version>2.11.12</scala.version>
-        <junit.version>4.11</junit.version>
+        <junit.version>4.13.1</junit.version>
         <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <scala-maven-plugin.version>3.3.2</scala-maven-plugin.version>
         <build-helper-maven-plugin.version>1.11</build-helper-maven-plugin.version>
         <hive.version>3.1.1</hive.version>
         <hadoop.version>3.1.0</hadoop.version>
+        <mysql.version>5.1.49</mysql.version>
         <parquet-avro.version>1.10.0</parquet-avro.version>
     </properties>
 
@@ -162,7 +163,7 @@
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-filesystem_${scala.binary.version}</artifactId>
-                <version>${flink.version}</version>
+                <version>1.11.2</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
@@ -192,6 +193,16 @@
                 <artifactId>flink-table-planner-blink_${scala.binary.version}</artifactId>
                 <version>${flink.version}</version>
                 <scope>${flink.scope}</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-jdbc_${scala.binary.version}</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
